--- a/pages/map.html
+++ b/pages/map.html
@@ -10,3 +10,5 @@ permalink: /map/
 <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v0.0.2/Leaflet.fullscreen.min.js'></script>
 <link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v0.0.2/leaflet.fullscreen.css' rel='stylesheet' />
 <script src="../pages/map.js"></script>
+
+<a class="b" href="https://github.com/quassy/elementary-apps/edit/gh-pages/pages/map.js"><span class="octicon octicon-pencil"></span> Improve this map on GitHub!</a>
