--- a/pages/map.html
+++ b/pages/map.html
@@ -11,4 +11,4 @@ permalink: /map/
 <link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v0.0.2/leaflet.fullscreen.css' rel='stylesheet' />
 <script src="../pages/map.js"></script>
 
-<a class="b" href="https://github.com/quassy/elementary-apps/edit/gh-pages/pages/map.js"><span class="octicon octicon-pencil"></span> Improve this map on GitHub!</a>
+<p><a class="b" href="https://github.com/quassy/elementary-apps/edit/gh-pages/pages/map.js"><span class="octicon octicon-pencil"></span> Improve this map on GitHub!</a></p>
