--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
----
 layout: blog
-<title>this is a websit</title>
----
+<!-- Please Costomize as per your needs -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>please enter your website title</title>
+    <!-- <link rel="stylesheet" href="css/style.css">-->
+</head>
+<body>
+    <nav>
+        <img class="logo" src="your image.png" alt="10">
+        <h1>welcome</h1>
+
+</body>
+</html> 
